--- a/style.css
+++ b/style.css
@@ -7,6 +7,26 @@ h1 {
     font-size: 50px;
 }
 
+.half-width {
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 4%;
+}
+
+.half-width p {
+    letter-spacing: 1spx;
+}
+
+.half-width img {
+    width: 80%;
+
+}
+
 .text-highlight {
-    color: orangered;
+    color: orange;
+}
+
+.first-section {
+    margin-top: 20px;
 }
