--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
     font-family: 'Yanone Kaffeesatz',
         sans-serif;
+    margin: 0;
 }
 
 h1 {
     font-size: 50px;
+}
+
+h3 {
+    letter-spacing: 1px;
 }
 
 .half-width {
@@ -12,14 +17,17 @@ h1 {
     float: left;
     margin-left: 5%;
     padding-left: 4%;
+    text-align: justify;
 }
 
 .half-width p {
-    letter-spacing: 1spx;
+    letter-spacing: 0.7px;
+
 }
 
 .half-width img {
     width: 80%;
+
 
 }
 
@@ -29,4 +37,16 @@ h1 {
 
 .first-section {
     margin-top: 20px;
+    background-image: url(images/top-banner.png);
+    height: 500px;
+}
+
+.hire-button {
+    text-decoration: none;
+    color: white;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 10px 20px;
+
 }
